Loop and HW2.5 is finnally Done

--- a/Basic_Programming_Concepts.ipynb
+++ b/Basic_Programming_Concepts.ipynb
@@ -72,7 +72,7 @@
       "metadata": {
         "id": "FuxV7IAtD02T"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +87,7 @@
         "id": "lwE0P085D0zG",
         "outputId": "3a71bced-9c1e-477f-f93d-56ea2ace4ce8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -113,7 +113,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "T1SwjUsiDzow"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -184,7 +184,7 @@
       "metadata": {
         "id": "JNws0MGlDzg7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -202,7 +202,7 @@
         "id": "mLHwTEGiDzd7",
         "outputId": "d5cd2d5a-c03d-4144-f69f-fed6b7d57ba5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,7 +235,7 @@
         "id": "rm0nhmHeDzaj",
         "outputId": "12086ee8-b7c9-41d9-8ba8-e3be1c487a05"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -265,7 +265,7 @@
       "metadata": {
         "id": "ik5FyttBDzXy"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -280,7 +280,7 @@
         "id": "1PjEoA-uDzU_",
         "outputId": "15f0d595-1f91-465b-9fea-3d9abfc7b200"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,7 +303,7 @@
         "id": "sLMZG-KQKcHU",
         "outputId": "50147c30-677f-4f41-d66c-72cb81d67d0d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -362,7 +362,7 @@
         "id": "XrZeH87fO1i_",
         "outputId": "0ea32781-89b8-48b9-b8a7-b4688da1c0e5"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,7 +387,7 @@
         "id": "iLNEG71ZO1gK",
         "outputId": "a25f4eab-e4f6-4654-98d1-469998ae59be"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,7 +410,7 @@
         "id": "P7S7sAA9PXyN",
         "outputId": "fbe1c1d8-f8ea-4c56-9530-2283586f4289"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,7 +433,7 @@
         "id": "V3n3VuB_O1da",
         "outputId": "0410cb84-0bea-4e67-b0f8-deca80994cba"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,7 +472,7 @@
       "metadata": {
         "id": "ygU4MSqbO1aU"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -487,7 +487,7 @@
         "id": "JlcXZyMvRVQs",
         "outputId": "c7740335-d3bb-45fb-8e5d-b7532cd102c2"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,7 +511,7 @@
         "id": "mhpcGajzRrqT",
         "outputId": "0ccab3a1-73b7-4fec-9119-9c4f2e5227e8"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -535,7 +535,7 @@
         "id": "u3QHMqUaRw3U",
         "outputId": "22317c61-a34e-482b-d5ed-884cef89a353"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,7 +587,7 @@
         "id": "ErPNmt1wTQ3l",
         "outputId": "e3d1f6a0-5519-4e4e-dbba-55984fcd6878"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -612,7 +612,7 @@
       "metadata": {
         "id": "OjXbkUvQU1H3"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -629,7 +629,7 @@
         "id": "O_PQSREoUn-6",
         "outputId": "4dddbf37-0394-4dd8-f396-663b63365d0c"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -654,7 +654,7 @@
       "metadata": {
         "id": "HSqTdVfKWQhi"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -674,7 +674,7 @@
         "id": "hnz7HqbRXJId",
         "outputId": "db8affea-5556-4701-98bc-b45e324ecf07"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,7 +717,7 @@
       "metadata": {
         "id": "ap0A83G3YRLF"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -732,7 +732,7 @@
         "id": "Hiq0wvZgY6GM",
         "outputId": "0983705c-5103-4a49-faf8-41cf49cc1a6f"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -758,7 +758,7 @@
         "id": "Xhktul9p9u5k",
         "outputId": "ea7fcd82-0ac5-4243-86f0-55184247bd9b"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -784,7 +784,7 @@
         "id": "MJ_KJpUE9xig",
         "outputId": "bd4dc02e-dee0-4f4c-f05c-bfafb61bbb8d"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -823,7 +823,7 @@
         "id": "HxXoQFZbbVpT",
         "outputId": "7472f748-4f85-4a37-df29-85a7d2531aee"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -846,7 +846,7 @@
         "id": "sasVkccPaJ_B",
         "outputId": "b1b399bb-04cf-4965-b6e5-bd3bd8238167"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -872,7 +872,7 @@
         "id": "5nlvP3RoadjF",
         "outputId": "af27ca4c-4bd1-4f2b-d10a-1191d162a79c"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -912,7 +912,7 @@
         "id": "JpnID7pKcOpu",
         "outputId": "a9260db5-dbb9-46f1-d993-bee021841e76"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -983,7 +983,7 @@
       "metadata": {
         "id": "Egjjd5fecOew"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -998,7 +998,7 @@
         "id": "XiZ_FbtecP5P",
         "outputId": "2bbf057b-2d8f-4921-b086-327705c129d4"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1019,6 +1019,80 @@
       "metadata": {
         "id": "rfhVRDhpIn8o"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "background = 11\n",
+        "\n",
+        "LogoKawklai = background * np.ones((24,18))\n",
+        "LogoKawklai[2,0:18] = 99\n",
+        "LogoKawklai[3,1:17] = 99\n",
+        "LogoKawklai[4,1:17] = 99\n",
+        "LogoKawklai[5:7,14:16] = 99\n",
+        "LogoKawklai[7:9,13:15] = 99\n",
+        "LogoKawklai[9:11,12:14] = 99\n",
+        "LogoKawklai[11:13,11:13] = 99\n",
+        "LogoKawklai[13:15,10:12] = 99\n",
+        "LogoKawklai[15:17,9:11] = 96\n",
+        "LogoKawklai[17:19,8:10] = 99\n",
+        "LogoKawklai[19:21,8:9] = 96\n",
+        "LogoKawklai[19:22,7:8] = 99\n",
+        "\n",
+        "LogoKawklai[7,2:12] = 99\n",
+        "LogoKawklai[8,3:11] = 99\n",
+        "LogoKawklai[9,3:11] = 99\n",
+        "LogoKawklai[9:11,8:10] = 96\n",
+        "LogoKawklai[11:12,8:10] = 99\n",
+        "LogoKawklai[12:14,7:9] = 96\n",
+        "LogoKawklai[14:16,6:8] = 99\n",
+        "LogoKawklai[15:16,6:7] = 96\n",
+        "LogoKawklai[16:17,6:7] = 99\n",
+        "\n",
+        "print(LogoKawklai)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "so6jqlg542ih",
+        "outputId": "593441c8-a30b-442d-e2a2-8c0b7135871c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99.]\n",
+            " [11. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 11.]\n",
+            " [11. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 99. 99. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 99. 99. 11. 11.]\n",
+            " [11. 11. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 11. 99. 99. 11. 11. 11.]\n",
+            " [11. 11. 11. 99. 99. 99. 99. 99. 99. 99. 99. 11. 11. 99. 99. 11. 11. 11.]\n",
+            " [11. 11. 11. 99. 99. 99. 99. 99. 96. 96. 99. 11. 99. 99. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 96. 96. 11. 11. 99. 99. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 99. 99. 11. 99. 99. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 96. 96. 11. 11. 99. 99. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 96. 96. 11. 99. 99. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 99. 99. 11. 11. 99. 99. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 96. 99. 11. 96. 96. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 99. 11. 11. 96. 96. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 99. 99. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 99. 99. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 99. 96. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 99. 96. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 99. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
+            " [11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11.]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
