HW2 finally DONE

--- a/Data_Structure.ipynb
+++ b/Data_Structure.ipynb
@@ -3418,10 +3418,8 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "background = 11\n",
         "\n",
-        "LogoKawklai = background * np.ones((24,18))\n",
+        "LogoKawklai = np.ones((24,18))\n",
         "LogoKawklai[2,0:18] = 99\n",
         "LogoKawklai[3,1:17] = 99\n",
         "LogoKawklai[4,1:17] = 99\n",
@@ -3449,41 +3447,41 @@
       ],
       "metadata": {
         "id": "3SSA2scV0unO",
-        "outputId": "935ec2dd-2c51-45ae-af20-da35dc31326a",
+        "outputId": "346a55f9-1782-46ec-9d83-4a386a20b22f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
-            " [11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
+            "[[ 1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.]\n",
+            " [ 1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.]\n",
             " [99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99.]\n",
-            " [11. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 11.]\n",
-            " [11. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 11.]\n",
-            " [11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 99. 99. 11. 11.]\n",
-            " [11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 99. 99. 11. 11.]\n",
-            " [11. 11. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 11. 99. 99. 11. 11. 11.]\n",
-            " [11. 11. 11. 99. 99. 99. 99. 99. 99. 99. 99. 11. 11. 99. 99. 11. 11. 11.]\n",
-            " [11. 11. 11. 99. 99. 99. 99. 99. 96. 96. 99. 11. 99. 99. 11. 11. 11. 11.]\n",
-            " [11. 11. 11. 11. 11. 11. 11. 11. 96. 96. 11. 11. 99. 99. 11. 11. 11. 11.]\n",
-            " [11. 11. 11. 11. 11. 11. 11. 11. 99. 99. 11. 99. 99. 11. 11. 11. 11. 11.]\n",
-            " [11. 11. 11. 11. 11. 11. 11. 96. 96. 11. 11. 99. 99. 11. 11. 11. 11. 11.]\n",
-            " [11. 11. 11. 11. 11. 11. 11. 96. 96. 11. 99. 99. 11. 11. 11. 11. 11. 11.]\n",
-            " [11. 11. 11. 11. 11. 11. 99. 99. 11. 11. 99. 99. 11. 11. 11. 11. 11. 11.]\n",
-            " [11. 11. 11. 11. 11. 11. 96. 99. 11. 96. 96. 11. 11. 11. 11. 11. 11. 11.]\n",
-            " [11. 11. 11. 11. 11. 11. 99. 11. 11. 96. 96. 11. 11. 11. 11. 11. 11. 11.]\n",
-            " [11. 11. 11. 11. 11. 11. 11. 11. 99. 99. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
-            " [11. 11. 11. 11. 11. 11. 11. 11. 99. 99. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
-            " [11. 11. 11. 11. 11. 11. 11. 99. 96. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
-            " [11. 11. 11. 11. 11. 11. 11. 99. 96. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
-            " [11. 11. 11. 11. 11. 11. 11. 99. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
-            " [11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11.]\n",
-            " [11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11. 11.]]\n"
+            " [ 1. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99.  1.]\n",
+            " [ 1. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99.  1.]\n",
+            " [ 1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1. 99. 99.  1.  1.]\n",
+            " [ 1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1. 99. 99.  1.  1.]\n",
+            " [ 1.  1. 99. 99. 99. 99. 99. 99. 99. 99. 99. 99.  1. 99. 99.  1.  1.  1.]\n",
+            " [ 1.  1.  1. 99. 99. 99. 99. 99. 99. 99. 99.  1.  1. 99. 99.  1.  1.  1.]\n",
+            " [ 1.  1.  1. 99. 99. 99. 99. 99. 96. 96. 99.  1. 99. 99.  1.  1.  1.  1.]\n",
+            " [ 1.  1.  1.  1.  1.  1.  1.  1. 96. 96.  1.  1. 99. 99.  1.  1.  1.  1.]\n",
+            " [ 1.  1.  1.  1.  1.  1.  1.  1. 99. 99.  1. 99. 99.  1.  1.  1.  1.  1.]\n",
+            " [ 1.  1.  1.  1.  1.  1.  1. 96. 96.  1.  1. 99. 99.  1.  1.  1.  1.  1.]\n",
+            " [ 1.  1.  1.  1.  1.  1.  1. 96. 96.  1. 99. 99.  1.  1.  1.  1.  1.  1.]\n",
+            " [ 1.  1.  1.  1.  1.  1. 99. 99.  1.  1. 99. 99.  1.  1.  1.  1.  1.  1.]\n",
+            " [ 1.  1.  1.  1.  1.  1. 96. 99.  1. 96. 96.  1.  1.  1.  1.  1.  1.  1.]\n",
+            " [ 1.  1.  1.  1.  1.  1. 99.  1.  1. 96. 96.  1.  1.  1.  1.  1.  1.  1.]\n",
+            " [ 1.  1.  1.  1.  1.  1.  1.  1. 99. 99.  1.  1.  1.  1.  1.  1.  1.  1.]\n",
+            " [ 1.  1.  1.  1.  1.  1.  1.  1. 99. 99.  1.  1.  1.  1.  1.  1.  1.  1.]\n",
+            " [ 1.  1.  1.  1.  1.  1.  1. 99. 96.  1.  1.  1.  1.  1.  1.  1.  1.  1.]\n",
+            " [ 1.  1.  1.  1.  1.  1.  1. 99. 96.  1.  1.  1.  1.  1.  1.  1.  1.  1.]\n",
+            " [ 1.  1.  1.  1.  1.  1.  1. 99.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.]\n",
+            " [ 1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.]\n",
+            " [ 1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.]]\n"
           ]
         }
       ]
