--- a/Pandas102.ipynb
+++ b/Pandas102.ipynb
@@ -853,11 +853,11 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "CoObkH87bGAl",
-        "outputId": "d595c5f1-e1b4-4141-a772-472ffdbab395",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CoObkH87bGAl",
+        "outputId": "d595c5f1-e1b4-4141-a772-472ffdbab395"
       },
       "execution_count": 13,
       "outputs": [
@@ -1251,28 +1251,56 @@
     {
       "cell_type": "code",
       "source": [
-        "sep_df = sep_df.iloc[:, :15]\n",
+        "sep_df = sep_df.iloc[-2:, :15]\n",
         "sep_df = sep_df[sep_df['งบกลาง'].isin(['งบประจำ', 'งบลงทุน'])]\n"
       ],
       "metadata": {
-        "id": "dgzZHmxYd-WE",
-        "outputId": "eb58ad03-dc8e-4ff2-910d-e46f488e411e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 132
-        }
+        "id": "dpDcwXSFf-ji"
       },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-d10bdd7a14f0>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print sep_df\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(...)?\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KkOeh8PIiIaD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "oct_df = pd.read_excel('/content/oct 65.xlsx')"
+      ],
+      "metadata": {
+        "id": "8kVLKwWVhN9X"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "oct_df = sep_df.iloc[-2:,:15]"
+      ],
+      "metadata": {
+        "id": "u81WL-hOhqhI"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "oct_df['เดือน-ปี'] = len(oct_df)*['oct-65']"
+      ],
+      "metadata": {
+        "id": "_FuFD-f3gF2W"
+      },
+      "execution_count": 34,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1492,6 +1520,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# HW4\n",
+        "จากตาราง"
+      ],
+      "metadata": {
+        "id": "B0OHjXEjjkem"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## ต่อตาราง\n",
         "\n",
         "\n",
@@ -1510,6 +1548,17 @@
       "metadata": {
         "id": "Yx1JFDuWoIsl"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sep_oct_df = pd.concat([sep_df,oct_df])"
+      ],
+      "metadata": {
+        "id": "J4y6LKz3ihKW"
+      },
+      "execution_count": 35,
+      "outputs": []
     },
     {
       "cell_type": "code",
