--- a/Pandas102.ipynb
+++ b/Pandas102.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "hO8PwF3pemUI"
       },
@@ -52,7 +52,7 @@
         "id": "NFSDO94yfmHe",
         "outputId": "805b6f3e-140a-4d01-ca24-772eb3dff9b5"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -77,7 +77,7 @@
         },
         "outputId": "81f27f23-e583-4b0e-95d0-e56e7125b22b"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -853,22 +853,10 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CoObkH87bGAl",
-        "outputId": "d595c5f1-e1b4-4141-a772-472ffdbab395"
+        "id": "CoObkH87bGAl"
       },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -883,7 +871,7 @@
         "id": "BP6ULkS7f_lH",
         "outputId": "9f7273aa-65c8-49bb-cc0c-3c4d8265cb9c"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1277,7 +1265,7 @@
       "metadata": {
         "id": "8kVLKwWVhN9X"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1288,7 +1276,7 @@
       "metadata": {
         "id": "u81WL-hOhqhI"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1299,7 +1287,7 @@
       "metadata": {
         "id": "_FuFD-f3gF2W"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1557,7 +1545,7 @@
       "metadata": {
         "id": "J4y6LKz3ihKW"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4761,6 +4749,55 @@
       "metadata": {
         "id": "o9g7HICFrwSn"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ีืunit_df.groupby('province_en')('price_min').min().head()"
+      ],
+      "metadata": {
+        "id": "jeMCJhR4UbVW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### bonus 10 อันดับอสังหาริมทรัพย์ที่เเพงที่สุดเป็นรายจังหวัด 10 จังหวัดเเรก"
+      ],
+      "metadata": {
+        "id": "Tn9ZbK9DVDBe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "unit_df.groupby('province_en')('price_min').max().reset_index().sort_values(by='price_min',ascending=False).head(10)"
+      ],
+      "metadata": {
+        "id": "SouPwP54X3F3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### bonus 5 อันดับอสังหาริมทรัพย์ที่เเพงที่สุดเป็นรายจังหวัด 10 จังหวัดเเรก"
+      ],
+      "metadata": {
+        "id": "o-agM9qNZM_F"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "v6ReFLGmYtLI"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
