--- a/DataViz04_Data_Comparison.ipynb
+++ b/DataViz04_Data_Comparison.ipynb
@@ -1087,12 +1087,12 @@
         "plt.plot([4,4],[min(sample_data.iloc[:,3]),max(sample_data.iloc[:,3])],'c:')"
       ],
       "metadata": {
-        "id": "cTZVoIw4elZ5",
-        "outputId": "8bdbdc26-c7e4-4cf8-f55f-ef96bf0cf2ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 447
-        }
+        },
+        "id": "cTZVoIw4elZ5",
+        "outputId": "8bdbdc26-c7e4-4cf8-f55f-ef96bf0cf2ed"
       },
       "execution_count": 33,
       "outputs": [
@@ -2144,8 +2144,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Quiz 7\n",
-        "plot barchart เปรียบเทียบ feature ทั้ง 4 ของ ดอกไม้แต่ละชนิด"
+        "# Quiz 5 plot barchart เปรียบเทียบ feature ทั้ง 4 ของ ดอกไม้แต่ละชนิด"
       ],
       "metadata": {
         "id": "zOGNtk4Zz5ac"
