final เพิ่มหน้าที่

--- a/Exam.ipynb
+++ b/Exam.ipynb
@@ -37,12 +37,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "- ภูริศ เครือชารี 643020514-7\n",
-        "- นรีกานต์ ปัญญารักษ์ 643020505-8\n",
-        "- พรไพลิน วังสินธ์ุ 633020375-4\n",
-        "- อาฤญช์ จรูญรักษ์ 643020528-6\n",
-        "- ทิพย์วัลย์ สุโพธิ์ 643020062-6\n",
-        "- หทัยชนก สรวงชัยภูมิ 643020525-2\n",
+        "- ภูริศ เครือชารี 643020514-7 หน้าที่ เขียนโค้ด\n",
+        "- นรีกานต์ ปัญญารักษ์ 643020505-8 หน้าที่ ทำ Dashboard\n",
+        "- พรไพลิน วังสินธ์ุ 633020375-4 หน้าที่ ทำ Dashboard\n",
+        "- อาฤญช์ จรูญรักษ์ 643020528-6 หน้าที่ ทำ Dashboard\n",
+        "- ทิพย์วัลย์ สุโพธิ์ 643020062-6 หน้าที่ ทำ Dashboard\n",
+        "- หทัยชนก สรวงชัยภูมิ 643020525-2 หน้าที่ ทำ Dashboard\n",
         "\n"
       ],
       "metadata": {
